feat(app): create example for AnimateContentSizeActivity.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".highlevel.AnimatedVisibilityActivity"/>
+        <activity android:name=".highlevel.AnimateContentSizeActivity"/>
     </application>
 
 </manifest>
