feat(app): create example of TweenActivity.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".highlevel.AnimatedVisibilityActivity"/>
         <activity android:name=".highlevel.AnimateContentSizeActivity"/>
         <activity android:name=".highlevel.CrossFadeActivity"/>
+        <activity android:name=".animationspecs.TweenActivity"/>
     </application>
 
 </manifest>
