feat(app): create empty example of RepeatableActivity.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".animationspecs.TweenActivity"/>
         <activity android:name=".animationspecs.SpringActivity"/>
         <activity android:name=".animationspecs.KeyFramesActivity"/>
+        <activity android:name=".animationspecs.RepeatableActivity"/>
     </application>
 
 </manifest>
