--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".animationspecs.SpringActivity"/>
         <activity android:name=".animationspecs.KeyFramesActivity"/>
         <activity android:name=".animationspecs.RepeatableActivity"/>
+        <activity android:name=".animationspecs.InfiniteRepeatableActivity"/>
     </application>
 
 </manifest>
