feat(app): create example for RememberInfiniteTransitionActivity.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
 
         <activity android:name=".lowlevel.AnimateAsStateActivity"/>
         <activity android:name=".lowlevel.UpdateTransitionActivity"/>
+        <activity android:name=".lowlevel.RememberInfiniteTransitionActivity"/>
     </application>
 
 </manifest>
